Add lastTimePlant UserInfo to adjust demand