@@ -38,6 +38,9 @@ class ApplicationDomainTest {
 
    @Test
    void should_create_default_user_info_when_inexitant() {
+      LocalDateTime now = LocalDateTime.now(ZoneOffset.UTC);
+      Supplier<LocalDateTime> nowSupplier = () -> now;
+      ReflectionTestUtils.setField(applicationDomain, "now", nowSupplier);
       var email = "greg.lol@mdr.fr";
       when(userInfoPort.findByEmail(email)).thenReturn(Optional.empty());
 
@@ -62,7 +65,8 @@ class ApplicationDomainTest {
                     )
             ),
             harvestableZones,
-            singletonList(TierEnum.TIER_1)
+            singletonList(TierEnum.TIER_1),
+            now
       );
 
       verify(userInfoPort).save(expectedUserInfo);
@@ -77,8 +81,9 @@ class ApplicationDomainTest {
       var harvestableZones = Arrays.stream(HarvestableZoneType.values())
               .map(harvestableZoneType -> new HarvestableZone(harvestableZoneType, null, harvestableZoneType.lockedByDefault))
               .collect(Collectors.toList());
-      when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(new UserInfo("1", "greg.lol@mdr.fr", 200, null, harvestableZones, singletonList(TierEnum.TIER_1))));
-      when(userInfoPort.save(any())).thenReturn(new UserInfo("1", "greg.lol@mdr.fr", 200, null, harvestableZones, Collections.emptyList()));
+      var lastTimePlant = now.minusHours(1);
+      when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(new UserInfo("1", "greg.lol@mdr.fr", 200, null, harvestableZones, singletonList(TierEnum.TIER_1), lastTimePlant)));
+      when(userInfoPort.save(any())).thenReturn(new UserInfo("1", "greg.lol@mdr.fr", 200, null, harvestableZones, Collections.emptyList(), null));
 
       OnSaleSeed seedsPlanted = OnSaleSeed.builder()
               .seedEnum(SeedEnum.GREEN_BEAN)
@@ -106,7 +111,8 @@ class ApplicationDomainTest {
               140,
               null,
               expectedHarvestableZones,
-            singletonList(TierEnum.TIER_1)
+            singletonList(TierEnum.TIER_1),
+            now
       );
 
       verify(userInfoPort).save(expectedUserInfo);
@@ -121,8 +127,8 @@ class ApplicationDomainTest {
       var harvestableZones = Arrays.stream(HarvestableZoneType.values())
               .map(harvestableZoneType -> new HarvestableZone(harvestableZoneType, null, harvestableZoneType.lockedByDefault))
               .collect(Collectors.toList());
-      when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(new UserInfo("1", "greg.lol@mdr.fr", 22, null, harvestableZones, singletonList(TierEnum.TIER_1))));
-      when(userInfoPort.save(any())).thenReturn(new UserInfo("1", "greg.lol@mdr.fr", 200, null, harvestableZones, Collections.emptyList()));
+      when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(new UserInfo("1", "greg.lol@mdr.fr", 22, null, harvestableZones, singletonList(TierEnum.TIER_1), now)));
+      when(userInfoPort.save(any())).thenReturn(new UserInfo("1", "greg.lol@mdr.fr", 200, null, harvestableZones, Collections.emptyList(), now));
 
       OnSaleSeed seedsPlanted = OnSaleSeed.builder()
               .seedEnum(SeedEnum.GREEN_BEAN)
@@ -150,7 +156,9 @@ class ApplicationDomainTest {
               12,
               null,
               expectedHarvestableZones,
-              singletonList(TierEnum.TIER_1));
+              singletonList(TierEnum.TIER_1),
+              now
+      );
 
       verify(userInfoPort).save(expectedUserInfo);
    }
@@ -172,7 +180,7 @@ class ApplicationDomainTest {
       var harvestableZones = Arrays.stream(HarvestableZoneType.values())
               .map(harvestableZoneType -> new HarvestableZone(harvestableZoneType, null, harvestableZoneType.lockedByDefault))
               .collect(Collectors.toList());
-      when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(new UserInfo("1", "greg.lol@mdr.fr", 200, null, harvestableZones, singletonList(TierEnum.TIER_1))));
+      when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(new UserInfo("1", "greg.lol@mdr.fr", 200, null, harvestableZones, singletonList(TierEnum.TIER_1), now)));
 
       OnSaleSeed seedsPlanted = OnSaleSeed.builder()
               .seedEnum(SeedEnum.GREEN_BEAN)
@@ -201,7 +209,7 @@ class ApplicationDomainTest {
       var harvestableZones = Arrays.stream(HarvestableZoneType.values())
               .map(harvestableZoneType -> new HarvestableZone(harvestableZoneType, null, harvestableZoneType.lockedByDefault))
               .collect(Collectors.toList());
-      when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(new UserInfo("1", "greg.lol@mdr.fr", 200, null, harvestableZones, Collections.emptyList())));
+      when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(new UserInfo("1", "greg.lol@mdr.fr", 200, null, harvestableZones, Collections.emptyList(), LocalDateTime.now(ZoneOffset.UTC))));
       OnSaleSeed seedsPlanted = OnSaleSeed.builder()
               .seedEnum(SeedEnum.GREEN_BEAN)
               .buyPrice(5)
@@ -221,7 +229,7 @@ class ApplicationDomainTest {
       var harvestableZones = Arrays.stream(HarvestableZoneType.values())
               .map(harvestableZoneType -> new HarvestableZone(harvestableZoneType, null, harvestableZoneType.lockedByDefault))
               .collect(Collectors.toList());
-      when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(new UserInfo("1", "greg.lol@mdr.fr", 100, null, harvestableZones, Collections.emptyList())));
+      when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(new UserInfo("1", "greg.lol@mdr.fr", 100, null, harvestableZones, Collections.emptyList(), LocalDateTime.now(ZoneOffset.UTC))));
       OnSaleSeed seedsPlanted = OnSaleSeed.builder()
               .seedEnum(SeedEnum.GREEN_BEAN)
               .buyPrice(200)
@@ -241,7 +249,7 @@ class ApplicationDomainTest {
    void should_not_plant_in_a_zone_when_zone_locked_by_tier() {
       var user = new User("","greg.lol@mdr.fr","" );
       when(getCurrentMarketInfo.execute()).thenReturn(Optional.of(new MarketInfo("1", List.of(OnSaleSeed.builder().seedEnum(SeedEnum.PEA).build()), LocalDateTime.now(ZoneOffset.UTC))));
-      UserInfo userInfo = new UserInfo("1", "greg.lol@mdr.fr", 200, null, singletonList(new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_2, null, false)), singletonList(TierEnum.TIER_1));
+      UserInfo userInfo = new UserInfo("1", "greg.lol@mdr.fr", 200, null, singletonList(new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_2, null, false)), singletonList(TierEnum.TIER_1), LocalDateTime.now(ZoneOffset.UTC));
       when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(userInfo));
 
       assertThatThrownBy(() -> applicationDomain.plantInAZone(HarvestableZoneType.ZONE_1_TIER_2, SeedEnum.PEA, user)).isInstanceOf(RuntimeException.class);
@@ -252,7 +260,7 @@ class ApplicationDomainTest {
    void should_not_plant_in_a_zone_when_zone_locked() {
       var user = new User("","greg.lol@mdr.fr","" );
       when(getCurrentMarketInfo.execute()).thenReturn(Optional.of(new MarketInfo("1", List.of(OnSaleSeed.builder().seedEnum(SeedEnum.PEA).build()), LocalDateTime.now(ZoneOffset.UTC))));
-      UserInfo userInfo = new UserInfo("1", "greg.lol@mdr.fr", 200, null, singletonList(new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_2, null, true)), List.of(TierEnum.TIER_1, TierEnum.TIER_2));
+      UserInfo userInfo = new UserInfo("1", "greg.lol@mdr.fr", 200, null, singletonList(new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_2, null, true)), List.of(TierEnum.TIER_1, TierEnum.TIER_2), LocalDateTime.now(ZoneOffset.UTC));
       when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(userInfo));
 
       assertThatThrownBy(() -> applicationDomain.plantInAZone(HarvestableZoneType.ZONE_1_TIER_2, SeedEnum.PEA, user)).isInstanceOf(RuntimeException.class);
@@ -262,7 +270,7 @@ class ApplicationDomainTest {
    void should_not_plant_in_a_zone_when_seed_locked_by_tier() {
       var user = new User("","greg.lol@mdr.fr","" );
       when(getCurrentMarketInfo.execute()).thenReturn(Optional.of(new MarketInfo("1", List.of(OnSaleSeed.builder().seedEnum(SeedEnum.ASPARAGUS).build()), LocalDateTime.now(ZoneOffset.UTC))));
-      UserInfo userInfo = new UserInfo("1", "greg.lol@mdr.fr", 200, null, singletonList(new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_7, null, false)), List.of(TierEnum.TIER_1, TierEnum.TIER_2));
+      UserInfo userInfo = new UserInfo("1", "greg.lol@mdr.fr", 200, null, singletonList(new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_7, null, false)), List.of(TierEnum.TIER_1, TierEnum.TIER_2), LocalDateTime.now(ZoneOffset.UTC));
       when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(userInfo));
 
       assertThatThrownBy(() -> applicationDomain.plantInAZone(HarvestableZoneType.ZONE_1_TIER_7, SeedEnum.ASPARAGUS, user)).isInstanceOf(RuntimeException.class);
@@ -273,7 +281,7 @@ class ApplicationDomainTest {
    void should_not_plant_in_a_zone_when_seed_and_zone_not_in_same_tier() {
       var user = new User("","greg.lol@mdr.fr","" );
       when(getCurrentMarketInfo.execute()).thenReturn(Optional.of(new MarketInfo("1", List.of(OnSaleSeed.builder().seedEnum(SeedEnum.ASPARAGUS).build()), LocalDateTime.now(ZoneOffset.UTC))));
-      UserInfo userInfo = new UserInfo("1", "greg.lol@mdr.fr", 200, null, singletonList(new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_6, null, false)), List.of(TierEnum.TIER_6, TierEnum.TIER_7));
+      UserInfo userInfo = new UserInfo("1", "greg.lol@mdr.fr", 200, null, singletonList(new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_6, null, false)), List.of(TierEnum.TIER_6, TierEnum.TIER_7), LocalDateTime.now(ZoneOffset.UTC));
       when(userInfoPort.findByEmail(user.getEmail())).thenReturn(Optional.of(userInfo));
 
       assertThatThrownBy(() -> applicationDomain.plantInAZone(HarvestableZoneType.ZONE_1_TIER_6, SeedEnum.ASPARAGUS, user)).isInstanceOf(RuntimeException.class);
@@ -300,10 +308,11 @@ class ApplicationDomainTest {
             false
       );
       var user = new User("grewa", "greg.lol@mdr.fr", "pass");
+      var now = LocalDateTime.now(ZoneOffset.UTC);
       when(userInfoPort.findByEmail("greg.lol@mdr.fr")).thenReturn(Optional.of(
-            new UserInfo("1", "greg.lol@mdr.fr", 200, new ProfitsByTiers(5, List.of(new ProfitByTier(TierEnum.TIER_1, 5))), singletonList(harvestableZone), Collections.emptyList())
+            new UserInfo("1", "greg.lol@mdr.fr", 200, new ProfitsByTiers(5, List.of(new ProfitByTier(TierEnum.TIER_1, 5))), singletonList(harvestableZone), Collections.emptyList(), now)
       ));
-      when(userInfoPort.save(any())).thenReturn(new UserInfo("osef", "osef", 200, null, emptyList(), Collections.emptyList()));
+      when(userInfoPort.save(any())).thenReturn(new UserInfo("osef", "osef", 200, null, emptyList(), Collections.emptyList(), now));
 
       applicationDomain.acknowledgeInfoSales(HarvestableZoneType.ZONE_1_TIER_1, user);
 
@@ -311,9 +320,11 @@ class ApplicationDomainTest {
             "1",
             "greg.lol@mdr.fr",
             210,
-              new ProfitsByTiers(10, List.of(new ProfitByTier(TierEnum.TIER_1, 10))),
-              singletonList(new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_1, null, false)),
-              Collections.emptyList());
+            new ProfitsByTiers(10, List.of(new ProfitByTier(TierEnum.TIER_1, 10))),
+            singletonList(new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_1, null, false)),
+            Collections.emptyList(),
+            now
+      );
       verify(userInfoPort).save(expectedUserInfo);
    }
 
@@ -322,10 +333,11 @@ class ApplicationDomainTest {
       var user = new User("grewa", "greg.lol@mdr.fr", "pass");
       HarvestableZone harvestableZone1 = new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_1, null, false);
       HarvestableZone harvestableZone3 = new HarvestableZone(HarvestableZoneType.ZONE_3_TIER_1, null, true);
+      var now = LocalDateTime.now(ZoneOffset.UTC);
       when(userInfoPort.findByEmail("greg.lol@mdr.fr")).thenReturn(Optional.of(
-            new UserInfo("1", "greg.lol@mdr.fr", 500, null, List.of(harvestableZone1, harvestableZone3), singletonList(TierEnum.TIER_1))
+            new UserInfo("1", "greg.lol@mdr.fr", 500, null, List.of(harvestableZone1, harvestableZone3), singletonList(TierEnum.TIER_1), now)
       ));
-      when(userInfoPort.save(any())).thenReturn(new UserInfo("osef", "osef", 200, null, emptyList(), Collections.emptyList()));
+      when(userInfoPort.save(any())).thenReturn(new UserInfo("osef", "osef", 200, null, emptyList(), Collections.emptyList(), now));
 
       applicationDomain.unlockHarvestableZone(user, HarvestableZoneType.ZONE_3_TIER_1);
 
@@ -338,7 +350,8 @@ class ApplicationDomainTest {
                       new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_1, null, false),
                       new HarvestableZone(HarvestableZoneType.ZONE_3_TIER_1, null, false)
               ),
-              singletonList(TierEnum.TIER_1)
+              singletonList(TierEnum.TIER_1),
+              now
       );
       verify(userInfoPort).save(expectedUserInfo);
    }
@@ -349,7 +362,7 @@ class ApplicationDomainTest {
       HarvestableZone harvestableZone1 = new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_1, null, false);
       HarvestableZone harvestableZone3 = new HarvestableZone(HarvestableZoneType.ZONE_3_TIER_1, null, true);
       when(userInfoPort.findByEmail("greg.lol@mdr.fr")).thenReturn(Optional.of(
-            new UserInfo("1", "greg.lol@mdr.fr", 100, null, List.of(harvestableZone1, harvestableZone3), Collections.emptyList())
+            new UserInfo("1", "greg.lol@mdr.fr", 100, null, List.of(harvestableZone1, harvestableZone3), Collections.emptyList(), LocalDateTime.now(ZoneOffset.UTC))
       ));
 
       assertThatThrownBy(() -> applicationDomain.unlockHarvestableZone(user, HarvestableZoneType.ZONE_3_TIER_1)).isInstanceOf(RuntimeException.class);
@@ -361,7 +374,7 @@ class ApplicationDomainTest {
       HarvestableZone harvestableZone1 = new HarvestableZone(HarvestableZoneType.ZONE_1_TIER_1, null, false);
       HarvestableZone harvestableZone3 = new HarvestableZone(HarvestableZoneType.ZONE_3_TIER_1, null, false);
       when(userInfoPort.findByEmail("greg.lol@mdr.fr")).thenReturn(Optional.of(
-              new UserInfo("1", "greg.lol@mdr.fr", 4000, null, List.of(harvestableZone1, harvestableZone3), Collections.emptyList())
+              new UserInfo("1", "greg.lol@mdr.fr", 4000, null, List.of(harvestableZone1, harvestableZone3), Collections.emptyList(), LocalDateTime.now(ZoneOffset.UTC))
       ));
 
       assertThatThrownBy(() -> applicationDomain.unlockHarvestableZone(user, HarvestableZoneType.ZONE_3_TIER_1)).isInstanceOf(RuntimeException.class);
@@ -371,7 +384,7 @@ class ApplicationDomainTest {
    void should_not_unlock_HarvestableZone_when_tier_locked() {
       var user = new User("grewa", "greg.lol@mdr.fr", "pass");
       when(userInfoPort.findByEmail("greg.lol@mdr.fr")).thenReturn(Optional.of(
-              new UserInfo("1", "greg.lol@mdr.fr", 4000, null, singletonList(new HarvestableZone(HarvestableZoneType.ZONE_2_TIER_2, null, true)), singletonList(TierEnum.TIER_1))
+              new UserInfo("1", "greg.lol@mdr.fr", 4000, null, singletonList(new HarvestableZone(HarvestableZoneType.ZONE_2_TIER_2, null, true)), singletonList(TierEnum.TIER_1), LocalDateTime.now(ZoneOffset.UTC))
       ));
 
       assertThatThrownBy(() -> applicationDomain.unlockHarvestableZone(user, HarvestableZoneType.ZONE_2_TIER_2)).isInstanceOf(RuntimeException.class);
@@ -380,20 +393,22 @@ class ApplicationDomainTest {
    @Test
    void should_unlock_tier() {
       var user = new User("grewa", "greg.lol@mdr.fr", "pass");
+      var now = LocalDateTime.now(ZoneOffset.UTC);
       when(userInfoPort.findByEmail("greg.lol@mdr.fr")).thenReturn(Optional.of(
-              new UserInfo("1", "greg.lol@mdr.fr", 3000, null, emptyList(), singletonList(TierEnum.TIER_1))
+              new UserInfo("1", "greg.lol@mdr.fr", 3000, null, emptyList(), singletonList(TierEnum.TIER_1), now)
       ));
-      when(userInfoPort.save(any())).thenReturn(new UserInfo("osef", "osef", 200, null, emptyList(), Collections.emptyList()));
+      when(userInfoPort.save(any())).thenReturn(new UserInfo("osef", "osef", 200, null, emptyList(), Collections.emptyList(), now));
 
       applicationDomain.unlockTier(user, TierEnum.TIER_2);
 
       var expectedUserInfo = new UserInfo(
-              "1",
-              "greg.lol@mdr.fr",
-              500,
-        null,
-              emptyList(),
-             List.of(TierEnum.TIER_1, TierEnum.TIER_2)
+            "1",
+            "greg.lol@mdr.fr",
+            500,
+            null,
+            emptyList(),
+            List.of(TierEnum.TIER_1, TierEnum.TIER_2),
+            now
       );
       verify(userInfoPort).save(expectedUserInfo);
    }
@@ -402,7 +417,7 @@ class ApplicationDomainTest {
    void should_not_unlock_tier_when_already_have_it() {
       var user = new User("grewa", "greg.lol@mdr.fr", "pass");
       when(userInfoPort.findByEmail("greg.lol@mdr.fr")).thenReturn(Optional.of(
-              new UserInfo("1", "greg.lol@mdr.fr", 500, null, emptyList(), List.of(TierEnum.TIER_1))
+              new UserInfo("1", "greg.lol@mdr.fr", 500, null, emptyList(), List.of(TierEnum.TIER_1), LocalDateTime.now(ZoneOffset.UTC))
       ));
 
       assertThatThrownBy(() -> applicationDomain.unlockTier(user, TierEnum.TIER_1)).isInstanceOf(RuntimeException.class);
@@ -412,7 +427,7 @@ class ApplicationDomainTest {
    void should_not_unlock_tier_when_not_enough_money() {
       var user = new User("grewa", "greg.lol@mdr.fr", "pass");
       when(userInfoPort.findByEmail("greg.lol@mdr.fr")).thenReturn(Optional.of(
-              new UserInfo("1", "greg.lol@mdr.fr", 9, null, emptyList(), Collections.emptyList())
+              new UserInfo("1", "greg.lol@mdr.fr", 9, null, emptyList(), Collections.emptyList(), LocalDateTime.now(ZoneOffset.UTC))
       ));
 
       assertThatThrownBy(() -> applicationDomain.unlockTier(user, TierEnum.TIER_2)).isInstanceOf(RuntimeException.class);
